fixed sitepages, js, animations

--- a/404.html
+++ b/404.html
@@ -3,17 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>ASGeodezja - 404</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tomasz Żuber">
     <meta name="keywords"
-        content="geodeta mikołów, geodezja mikołów, geodeta śląsk, geodezja śląsk, ASGeodezja, usługi geodezyjne, usługi geodezyjne Sebastian Staszak">
+        content="ASGeodezja, geodezja, geodeta, geodeta pińczów, geodezja pińczów, świętokrzyskie, geodezja świętokrzyskie, usługi geodezyjne">
     <meta name="description"
         content="Świadczymy najwyższej jakości usługi geodezyjne - mapy, inwentaryzacje, wytyczenia, podziały. Oferujemy atrakcyjne ceny, rzetelność i pełny profesjonalizm.">
     <meta name="robots" content="noindex">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
-    <title>ASGeodezja - 404</title>
-    <script defer src="./dist/js/subpage.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
@@ -22,6 +21,7 @@
 </head>
 
 <body class="err-body">
+
     <nav class="nav err-nav">
         <div class="nav-mobile">
             <div class="nav-mobile__logo">
@@ -31,7 +31,7 @@
                     <span class="nav-mobile__text--blue">AS</span>Geodezja
                 </p>
             </div>
-            <button class="burger-btn" title="Otwieranie nawigacji mobilnej">
+            <button class="burger-btn" arialabel="Otwieranie nawigacji mobilnej">
                 <div class="burger-btn__box">
                     <div class="burger-btn__bars"></div>
                 </div>
@@ -70,11 +70,11 @@
                 <p class="error-title">Wygląda na to, że strona której szukasz nie istnieje </p>
                 <a href="index.html" class="error-btn">Przejdź do strony głównej</a>
             </div>
-
-            <p class="error-footer">&copy; <span class="footer__year"></span> by ASGeodezja</p>
+            <p class="error-footer">&copy; <span class="footer__year"></span> by Tomasz Żuber</p>
         </section>
-
     </main>
+
+    <script type='module' src="./dist/js/main.min.js"></script>
 </body>
 
 </html>
