--- a/services.html
+++ b/services.html
@@ -12,7 +12,6 @@
     <meta name="description"
         content="Świadczymy najwyższej jakości usługi geodezyjne - mapy, inwentaryzacje, wytyczenia, podziały. Oferujemy atrakcyjne ceny, rzetelność i pełny profesjonalizm.">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
-    <script defer src="./dist/js/subpage.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
@@ -43,7 +42,7 @@
                 <span class="nav-mobile__text--blue">AS</span>Geodezja
             </p>
         </div>
-        <button class="burger-btn" title="Otwieranie nawigacji mobilnej">
+        <button class="burger-btn" aria-label="Otwieranie nawigacji mobilnej">
             <div class="burger-btn__box">
                 <div class="burger-btn__bars"></div>
             </div>
@@ -81,7 +80,7 @@
     </header>
 
     <main>
-
+        <!-- SERVICES -->
         <section class="services section-padding">
             <div class="wrapper">
                 <h2 class="section-title">Nasza oferta</h2>
@@ -170,7 +169,6 @@
                     </div>
                 </div>
             </div>
-
         </section>
 
         <section class="contact section-padding" id="contact">
@@ -206,9 +204,9 @@
         </div>
         <div class="map__container">
             <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15395.209072142208!2d-45.42305990387456!3d61.16244122734965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4eabe1a572f52967%3A0x122510319531c2c!2sPort%20lotniczy%20Narsarsuaq!5e0!3m2!1spl!2spl!4v1667650635660!5m2!1spl!2spl"
-            style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade" class="google-map" aria-label="Mapa z googlemaps z lokalizacją firmy"></iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15395.209072142208!2d-45.42305990387456!3d61.16244122734965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4eabe1a572f52967%3A0x122510319531c2c!2sPort%20lotniczy%20Narsarsuaq!5e0!3m2!1spl!2spl!4v1667650635660!5m2!1spl!2spl"
+                style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                class="google-map" aria-label="Mapa z googlemaps z lokalizacją firmy"></iframe>
         </div>
     </div>
 </section>
@@ -233,6 +231,7 @@
         <p class="footer__text">&copy; <span class="footer__year"></span> by Tomasz Żuber</p>
     </div>
 </footer>
+    <script src="./dist/js/navandyear.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./dist/js/aossettings.min.js"></script>
 </body>
