--- a/404.html
+++ b/404.html
@@ -22,44 +22,56 @@
 
 <body class="err-body">
 
-    <nav class="nav err-nav">
-        <div class="nav-mobile">
-            <div class="nav-mobile__logo">
-                <a href="#">
-                    <img src="./dist/img/logo.png" alt="Logo firmy ASGeodezja" /> </a>
-                <p class="nav-mobile__text">
-                    <span class="nav-mobile__text--blue">AS</span>Geodezja
-                </p>
-            </div>
-            <button class="burger-btn" arialabel="Otwieranie nawigacji mobilnej">
-                <div class="burger-btn__box">
-                    <div class="burger-btn__bars"></div>
-                </div>
-            </button>
-            <div class="nav-mobile__items">
-                <a class="nav-mobile__item" href="index.html">Strona Główna</a>
-                <a class="nav-mobile__item" href="services.html">Usługi</a>
-                <a class="nav-mobile__item" href="about-us.html">O nas</a>
-                <a class="nav-mobile__item" href="#contact">Kontakt</a>
-            </div>
+    <div class="topbar">
+    <div class="email-box">
+        <i class="fa-solid fa-envelope"></i>
+        <span>E-mail:</span>
+        <a href="mailto:asgeodezjapinczow@onet.eu">asgeodezjapinczow@onet.eu</a>
+    </div>
+    <div class="phone-box">
+        <i class="fa-solid fa-phone"></i>
+        <span>Masz pytanie? Zadzwoń!</span>
+        <a href="tel:+48000000000">000 000 000</a>
+    </div>
+</div>
+    <nav class="nav">
+    <div class="nav-mobile">
+        <div class="nav-mobile__logo">
+            <a href="#">
+                <img src="./dist/img/logo.png" alt="Logo firmy ASGeodezja" /> </a>
+            <p class="nav-mobile__text">
+                <span class="nav-mobile__text--blue">AS</span>Geodezja
+            </p>
         </div>
+        <button class="burger-btn" aria-label="Otwieranie nawigacji mobilnej">
+            <div class="burger-btn__box">
+                <div class="burger-btn__bars"></div>
+            </div>
+        </button>
+        <div class="nav-mobile__items">
+            <a class="nav-mobile__item" href="index.html">Strona Główna</a>
+            <a class="nav-mobile__item" href="services.html">Usługi</a>
+            <a class="nav-mobile__item" href="aboutus.html">O nas</a>
+            <a class="nav-mobile__item" href="#contact">Kontakt</a>
+        </div>
+    </div>
 
-        <div class="nav-comp wrapper">
-            <div class="nav-comp__logo">
-                <a href="#">
-                    <img src="./dist/img/logo.png" alt="Logo firmy ASGeodezja" /> </a>
-                <p class="nav-comp__text">
-                    <span class="nav-comp__text--blue">AS</span>Geodezja
-                </p>
-            </div>
-            <div class="nav-comp__items">
-                <a class="nav-comp__item" href="index.html">Strona Główna</a>
-                <a class="nav-comp__item" href="services.html">Usługi</a>
-                <a class="nav-comp__item" href="about-us.html">O nas</a>
-                <a class="nav-comp__item" href="#contact">Kontakt</a>
-            </div>
+    <div class="nav-comp wrapper">
+        <div class="nav-comp__logo">
+            <a href="#">
+                <img src="./dist/img/logo.png" alt="Logo firmy ASGeodezja" /> </a>
+            <p class="nav-comp__text">
+                <span class="nav-comp__text--blue">AS</span>Geodezja
+            </p>
         </div>
-    </nav>
+        <div class="nav-comp__items">
+            <a class="nav-comp__item" href="index.html">Strona Główna</a>
+            <a class="nav-comp__item" href="services.html">Usługi</a>
+            <a class="nav-comp__item" href="aboutus.html">O nas</a>
+            <a class="nav-comp__item" href="#contact">Kontakt</a>
+        </div>
+    </div>
+</nav>
 
     <main>
         <section class="error-page">
@@ -74,7 +86,7 @@
         </section>
     </main>
 
-    <script type='module' src="./dist/js/main.min.js"></script>
+    <script src="./dist/js/navandyear.min.js"></script>
 </body>
 
 </html>
